--- a/build.gradle
+++ b/build.gradle
@@ -15,14 +15,18 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot' 
-apply plugin: 'io.spring.dependency-management' 
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'application'
 
 jar {
     baseName = 'tictactoe_server'
     version = '0.0.1-SNAPSHOT'
 }
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    options.encoding = 'UTF-8'
+}
 
 repositories {
     mavenCentral()
@@ -31,6 +35,12 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.1'
+    compile 'com.github.ben-manes.caffeine:caffeine:1.3.3'
+    compile 'com.github.ben-manes.caffeine:guava:1.3.3'
+    compile 'com.github.ben-manes.caffeine:jcache:1.3.3'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
